--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "belvg/module-sqs",
   "description": "N/A",
   "require": {
-    "php": "~7.1.3||~7.2.0",
+    "php": "^7.2|^7.3",
     "magento/framework": "^102.0.0",
     "magento/framework-message-queue": "^100.3.0",
     "enqueue/sqs":"@dev"
